--- a/Model.html
+++ b/Model.html
@@ -609,11 +609,11 @@
     <script src="js/script.js"></script>
     <script src="js/model.js"></script>
     <script src="js/contents.js"></script>
-    <script type="text/javascript" async src="js/MathJax/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <!--<script type="text/javascript" async src="js/MathJax/MathJax.js?config=TeX-MML-AM_CHTML"></script> -->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&amp;action=raw&amp;ctype=text/javascript"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&amp;action=raw&amp;ctype=text/javascript"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/model.js&amp;action=raw&amp;ctype=text/javascript"></script>-->
-    <!--<script src="http://2018.igem.org/common/MathJax-2.5-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>-->
+    <script src="http://2018.igem.org/common/MathJax-2.5-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
